# egui_plot

./: .cursorrules  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.md  Makefile  README.md  RELEASES.md  WELCOME_CONTRIBUTIONS.md  clippy.toml  demo-2837371c2efb628e.js  demo-2a9ab870def6d860.js  demo-2a9ab870def6d860_bg.wasm  demo-31bd7b7fc1d0f4fb.js  demo-34380dd6db7f8c81.js  demo-34380dd6db7f8c81_bg.wasm  demo-58bafe6d6222fdd4.js  demo-622d3e267d7d877b.js  demo-622d3e267d7d877b_bg.wasm  demo-698202bcb40f865a_bg.wasm  demo-6a6351902de8f9d4.js  demo-6a6351902de8f9d4_bg.wasm  demo-78efc3b8c1df189c.js  demo-78efc3b8c1df189c_bg.wasm  demo-a836d67cb63366d7.js  demo-a836d67cb63366d7_bg.wasm  demo-b872d4adacd7a0fc.js  demo-b872d4adacd7a0fc_bg.wasm  demo-bb0d384ec6cd6ce4.js  demo-bb0d384ec6cd6ce4_bg.wasm  demo-ccafab96d2f576a1.js  demo-ccafab96d2f576a1_bg.wasm  demo-d268e9d3b97a140d.js  demo-d268e9d3b97a140d_bg.wasm  demo-d2d28b5867c99576.js  demo-e0f2a2e566508ea8.js  demo-f2927f90eee4db13.js  demo-f41dc7cb94fecae8.js  (+12 more)
.github/: lint_newlines.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: cargo_machete.yml  kitdiff_comment.yml  labels.yml  links.yml  pages.yml  rust.yml
crates/egui_plot/src/: axis.rs  legend.rs  lib.rs
crates/egui_plot/src/items/: values.rs
demo/: Cargo.toml  README.md  index.html
demo/src/: app.rs  lib.rs  main.rs  plot_demo.rs
demo/tests/: plot.rs
egui_plot/: Cargo.toml
egui_plot/src/: aesthetics.rs  axis.rs  axis_transform.rs  bounds.rs  colormap.rs  colors.rs  cursor.rs  data.rs  grid.rs  label.rs  legend.rs  lib.rs  log_helper.rs  math.rs  memory.rs  placement.rs  plot.rs  plot_ui.rs  rect_elem.rs  transform.rs  utils.rs  values.rs
egui_plot/src/items/: arrows.rs  bar.rs  bar_chart.rs  box_elem.rs  box_plot.rs  filled_area.rs  heatmap.rs  item_reference.rs  line.rs  mod.rs  plot_image.rs  points.rs  polygon.rs  rect_elem.rs  series.rs  span.rs  text.rs  tooltip.rs  values.rs
egui_plot/src/overlays/: coordinates.rs  legend.rs  mod.rs  pin.rs  tooltip.rs
examples/borrow_points/: Cargo.toml  README.md
examples/borrow_points/src/: app.rs  lib.rs  main.rs
examples/box_plot/: Cargo.toml  README.md
examples/box_plot/src/: app.rs  lib.rs  main.rs
examples/custom_axes/: Cargo.toml  README.md
examples/custom_axes/src/: app.rs  lib.rs  main.rs
examples/custom_plot_manipulation/: Cargo.toml  README.md
examples/custom_plot_manipulation/src/: app.rs  lib.rs  main.rs
examples/custom_tooltip/: Cargo.toml  README.md
examples/custom_tooltip/src/: app.rs  lib.rs  main.rs
examples/default_tooltip/: Cargo.toml  README.md
examples/default_tooltip/src/: app.rs  lib.rs  main.rs
examples/filled_area/: Cargo.toml  README.md
examples/filled_area/src/: app.rs  lib.rs  main.rs
examples/heatmap/: Cargo.toml  README.md
examples/heatmap/src/: app.rs  lib.rs  main.rs
examples/histogram/: Cargo.toml  README.md
examples/histogram/src/: app.rs  lib.rs  main.rs
examples/interaction/: Cargo.toml  README.md
examples/interaction/src/: app.rs  lib.rs  main.rs
examples/items/: Cargo.toml  README.md
examples/items/src/: app.rs  lib.rs  main.rs
examples/latex_typst/: Cargo.toml
examples/latex_typst/src/: main.rs
examples/legend/: Cargo.toml  README.md
examples/legend/src/: app.rs  lib.rs  main.rs
examples/legend_sort/: Cargo.toml  README.md
examples/legend_sort/src/: app.rs  lib.rs  main.rs
examples/lines/: Cargo.toml  README.md
examples/lines/src/: app.rs  lib.rs  main.rs
examples/linked_axes/: Cargo.toml  README.md
examples/linked_axes/src/: app.rs  lib.rs  main.rs
examples/log_scale/: Cargo.toml
examples/log_scale/src/: main.rs
examples/markers/: Cargo.toml  README.md
examples/markers/src/: app.rs  lib.rs  main.rs
examples/performance/: Cargo.toml  README.md
examples/performance/src/: app.rs  lib.rs  main.rs
examples/pins/: Cargo.toml  README.md
examples/pins/src/: app.rs  lib.rs  main.rs
examples/pins_with_tooltip/: Cargo.toml  README.md
examples/pins_with_tooltip/src/: app.rs  lib.rs  main.rs
examples/plot_span/: Cargo.toml  README.md
examples/plot_span/src/: app.rs  lib.rs  main.rs
examples/polars/: Cargo.toml
examples/polars/src/: app.rs  lib.rs  main.rs
examples/save_plot/: Cargo.toml  README.md
examples/save_plot/src/: app.rs  lib.rs  main.rs
examples/stacked_bar/: Cargo.toml  README.md
examples/stacked_bar/src/: app.rs  lib.rs  main.rs
examples/userdata_points/: Cargo.toml  README.md
examples/userdata_points/src/: app.rs  lib.rs  main.rs
examples_utils/: Cargo.toml
examples_utils/src/: lib.rs
scripts/: accept_snapshots.sh  check.sh  generate_changelog.py  lint.py  template_update.py  update_snapshots_from_ci.sh
scripts/clippy_wasm/: clippy.toml
