[package]
name = "examples_utils"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
eframe = { workspace = true, default-features = false }
egui = { workspace = true }
egui_kittest = { workspace = true, features = ["snapshot", "eframe"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_kittest = { workspace = true, features = ["wgpu"] }
image = { workspace = true, features = ["png"] }
