[package]
name = "custom_plot_manipulation"
version = "0.1.0"
authors = ["Ygor Souza <ygor.souza@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
publish = false

[lints]
workspace = true


[dependencies]
eframe = { workspace = true, features = ["default"] }
egui_plot.workspace = true
env_logger = { workspace = true, default-features = false, features = [
    "auto-color",
    "humantime",
] }
