[package]
name = "custom_plot_manipulation"
version = "0.1.0"
authors = ["Ygor Souza <ygor.souza@protonmail.com>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
eframe = { workspace = true, features = ["default"] }
egui_plot.workspace = true
env_logger = { workspace = true, default-features = false, features = [
    "auto-color",
    "humantime",
] }
examples_utils.workspace = true

[package.metadata.cargo-shear]
ignored = ["env_logger"] # used by make_main! macro
