[package]
name = "heatmap"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
eframe = { workspace = true, features = ["default"] }
egui_plot.workspace = true
env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }
examples_utils.workspace = true

[package.metadata.cargo-shear]
ignored = [
    "env_logger",
] # used by make_main! macro
