[package]
name = "save_plot"
version = "0.1.0"
authors = ["hacknus <l_stoeckli@bluewin.ch>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.80"
publish = false

[lints]
workspace = true

[dependencies]
eframe = { workspace = true, features = ["default"] }
egui_plot.workspace = true
image = { workspace = true, features = ["png"] }
rfd = "0.15.1"
env_logger = { workspace = true, default-features = false, features = [
    "auto-color",
    "humantime",
] }
