[package]
name = "save_plot"
version = "0.1.0"
authors = ["hacknus <l_stoeckli@bluewin.ch>"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
eframe = { workspace = true, features = ["default"] }
egui_plot.workspace = true
image = { workspace = true, features = ["png"] }
rfd = "0.15.1"
env_logger = { workspace = true, default-features = false, features = [
    "auto-color",
    "humantime",
] }
